# radio-shell-python

./: .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  docker-run.sh  pyproject.toml  radio.bat  radio.sh  requirements.txt
src/main/resources/: application.properties  stations.json
src/radio/: commands_basic.py  commands_management.py  commands_playback.py  config.py  main.py  models.py  player.py  shell.py  ui.py  web.py
src/radio/data/: stations.json
src/radio/services/: localization_service.py  notification_service.py  radio_browser_service.py  settings_service.py  station_service.py  statistics_service.py  system_service.py
src/radio/static/: app.js  index.html  style.css
tests/: test_commands.py  test_completer.py  test_main.py  test_models.py  test_player.py  test_settings_service.py  test_station_service.py  test_web.py
