[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-shell-python"
version = "1.0.0"
description = "Terminal-based FM radio player specializing in Turkish and global radio stations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gokhan Tombul" }
]
dependencies = [
    "prompt-toolkit>=3.0.43",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "psutil>=5.9.8"
]

[project.scripts]
radio-shell = "src.radio.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
